Fixed all API routes to be way more consistent, and updated docs.
